# exam-mind

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  ExamMind_项目介绍.docx  LICENSE  PROJECT_INTRODUCTION.md  README.md  README_en.md  app.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
agents_context/architecture/: prompt_aggressive_architect.xml  prompt_validator.xml  v0.3.0_enhancement_design.md  v0.3.0_final_design.md  v0.3.0_fix_design.md  validator.md
config/: settings.yaml
config/prompts/: academic_answer.xml  academic_system.xml  emotional_system.xml  gather_emotional_intel.xml  hallucination_eval.xml  hallucination_system.xml  plan_drafter.xml  plan_drafter_system.xml  plan_reviewer_academic_system.xml  plan_reviewer_emotional_system.xml  plan_rewrite.xml  planner_generate.xml  planner_system.xml  (+2 more)
frontend/: .env.example  components.json  next-env.d.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
scripts/: build_index.py
src/: schemas.py
tests/: conftest.py  test_academic.py  test_app.py  test_builder.py  test_checkpointer.py  test_config.py  test_emotional.py  test_gather_intel.py  test_hallucination.py  test_hil_interrupt.py  test_hil_summary.py  test_integration.py  test_llm_fallback.py  test_parallel_retrieval.py  test_plan_adversarial.py  test_planner.py  test_rag.py  test_section_splitter.py  test_security.py  test_sse_lifecycle.py  test_state.py  test_supervisor.py  test_tools.py  test_tracing.py
(+62 files in other folders)
