[project]
name = "exam-mind"
version = "0.4.0"
description = "ExamMind — Multi-agent AI tutoring system for exam preparation"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "langchain>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-community>=0.4,<1",
    "langchain-text-splitters>=1.1,<2",
    "langgraph>=1.1,<2",
    "langgraph-checkpoint-postgres>=3.0,<4",
    # RAG
    "chromadb>=1.5,<2",
    "pymupdf>=1.27,<2",
    "rank-bm25>=0.2.2,<0.3",
    "jieba>=0.42.1,<0.43",
    # Web Search
    "duckduckgo-search>=8.0,<9",
    # Utilities
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    # API
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    # Observability
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.0,<2",
    "httpx>=0.28,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

